# RobloxDumper

./: CMakeLists.txt  DumperState.cpp  DumperState.hpp  Entry.cpp  Logger.cpp  Logger.hpp  README.md  Settings.hpp  SignatureMatcher.cpp  SignatureMatcher.hpp  StringMatcher.cpp  StringMatcher.hpp  Utilities.cpp  Utilities.hpp
Analysis/: Disassembler.cpp  Disassembler.hpp  README.MD  RTTI.cpp  RTTI.hpp  StringSearcher.cpp  StringSearcher.hpp  XrefSearcher.cpp  XrefSearcher.hpp
AnalysisTasks/: TaskBase.hpp
AnalysisTasks/VMShuffles/: VMShuffle3And5.cpp  VMShuffle3And5.hpp  VMShuffle7And8.cpp  VMShuffle7And8.hpp  VmShuffle4.cpp  VmShuffle4.hpp  VmShuffle6.cpp  VmShuffle6.hpp  VmShuffle7.cpp  VmShuffle7.hpp
AnalysisTasks/VMValues/: GlobalState.cpp  GlobalState.hpp
Dependencies/Luau/: Sources.cmake
Dependencies/Luau/VM/src/: StudioOffsets.cpp  StudioOffsets.h  laux.cpp  ldo.cpp  lgc.cpp  lobject.cpp  lobject.h  ltable.cpp  ltable.h  lvmexecute.cpp  lvmutils.cpp
Dependencies/RTTIHook/: RTTIScanner.h  VFTHook.h
Events/: Connection.hpp  Event.hpp  README.MD
